[package]
name = "scanlex"
version = "0.1.2"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]

description = "a simple lexical scanner for parsing text into tokens"

repository = "https://github.com/stevedonovan/scanlex.git"

readme = "readme.md"

license = "MIT"

keywords = ["scan","text","tokenize","input"]

[dependencies]
